[package]
name = "Stargazing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.29.1" ,features = ["macros"]}
futures-util = "0.3"
rusqlite = "0.29.0"
reqwest = { version = "0.11", features = ["json","blocking"] }
serde = {version = "1.0.169", features=["derive"]}
serde_json = "1.0.100"
thiserror = "1.0.43"
threadpool = "1.8.1"
num_cpus = "1.0"

[dependencies.bilive-danmaku]
git = "https://github.com/4t145/bilive-danmaku"#
branch = "master"#
features = ["rt_tokio", "json"]
